# unosmium.org

./: .gitignore  Cargo.toml  README.md  netlify.toml  package.json
assets/results_template/: style.scss
data/: 2020-VA-Fairfax-Invitational-C.yaml  recents.yaml
source/layouts/: layout.erb
source/results/: index.html.erb  template.html.erb
src/: main.rs
src/templates/: results_index.html
