[package]
name = "unosmium-website"
version = "0.1.0"
authors = ["Em Zhan <zqianem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciolyff = { git = "https://github.com/unosmium/sciolyff-rust" }
image = "0.23.6"
palette = "0.5.0"
css-colors = "1.0.1"
contrast = "0.1.0"
rgb = "0.8.20"
resvg = "0.11.0"
usvg = "0.11.0"
time = "0.2.16"
csv = "1.1.3"
